--- a/HackatonSeguridad/app/src/main/res/values/strings.xml
+++ b/HackatonSeguridad/app/src/main/res/values/strings.xml
@@ -1,3 +1,3 @@
 <resources>
-    <string name="app_name">Hackaton Seguridad</string>
+    <string name="app_name">MyEasyAlert</string>
 </resources>
